# util

./: .clang-format  .gitignore  A is for array.txt  blank-before-comment-py.go  build-common.bat  build-py-b.bat  build-py.bat  build.bat  capitalize-comments-py.go  capitalize-comments.go  check-cr.go  check-trail-space.go  check-unicode-names.go  clean.bat  cmp-dirs.go  commas.c  comment-space.go  common.go  common.py  common_test.go  common_test.py  css-comment.go  csv-to-html.go  do-all-recur-js.go  do-all-recur.go  echo-count.go  echo-sizes.go  extract-csv.go  findfiles.go  fmt-py.bat  fmt.bat  g.go  gather.go  generate-csv.py  gg.go  git-ls.go  go-run.bat  go.mod  grayscreen.bat  greenscreen.go  (+32 more)
TestAzureAIOpenAI/: Program.cs  README.md  TestAzureAIOpenAI.csproj  TestAzureAIOpenAI.sln  fmt.bat  test.bat
TestExtractAssociatedIcon/: Program.cs  README.md  TestExtractAssociatedIcon.csproj  TestExtractAssociatedIcon.sln  test.bat
TestPdfiumViewer/: Program.cs  README.md  TestPdfiumViewer.csproj  TestPdfiumViewer.sln
TestSHGetFileInfo/: Program.cs  README.md  TestSHGetFileInfo.csproj  TestSHGetFileInfo.sln  test.bat
TestStockIcon/: MainForm.cs  Program.cs  README.md  TestStockIcon.csproj  TestStockIcon.sln
TestStockIcon2/: Program.cs  README.md  TestStockIcon2.sln
aklo-main/: README.md  aklo.uew  fmt.bat  pom.xml
blank-png/: Cargo.toml
boost-test/: test-clang.bat  test-msvc.bat  test.cpp
boost-test-calc/: CMakeLists.txt  calculator.cpp  calculator.hpp  notes.txt  test_calculator.cpp
check-file-assoc/: build.bat  check-file-assoc.cc
clean-cs/: Etc.cs  (+15 more)
(+1196 files in other folders)
